fix: buttons alignment

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -130,7 +130,7 @@ $colors: (
     padding-bottom: 24px !important;
   }
 
-  .alert-button.button-alert {
+  .alert-button.btp-btn-solid {
     margin: 0 8px 14px 0;
   }
 
